--- a/.env
+++ b/.env
@@ -26,8 +26,10 @@ APP_SECRET=8fb784059fea65f177682c5fd0392926
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://root:Maudepass33!@localhost:3306/wild-series-symfony?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
 
 ###> symfony/messenger ###
 # Choose one of the transports below
